2005-12-23  Gert Driesen  <drieseng@users.sourceforge.net>

	* XslTransformTests.cs: Added bug numbers to test cases.

2005-12-17  Gert Driesen  <drieseng@users.sourceforge.net>

	* XsltCompileExceptionTests.cs: Added tests for ctors.
	* XsltExceptionTests.cs: Added tests for ctors.
	* XslTransformTests.cs: Added tests for validation of <xsl:output>
	attributes.

2005-12-12  Atsushi Enomoto  <atsushi@ximian.com>

	* XslTransformTests.cs : (LocalParameter) [NotDotNet] should not have
	  been undone.

2005-12-04  Gert Driesen  <drieseng@users.sourceforge.net>

	* XslTransformTests.cs: Explictly omit xml declaration, allowing
	test to pass on both Mono and MS.NET.

2005-12-04  Gert Driesen  <drieseng@users.sourceforge.net>

	* XslTransformTests.cs: Undo formatting changes.

2005-12-04  Gert Driesen  <drieseng@users.sourceforge.net>

	* XslTransformTests.cs: Added test for MS bug, described in KB834667.

2005-12-04  Gert Driesen  <drieseng@users.sourceforge.net>

	* XslTransformTests.cs: Added test for sorting an empty node set, which
	is also a test for omitting XML declaration if no XML is output.
	No longer derive from deprecated Assertion class, formatting updates.

2005-11-17  Atsushi Enomoto  <atsushi@ximian.com>

	* XslTransformTests.cs : added WhitespaceHandling ().

2005-10-24  Atsushi Enomoto  <atsushi@ximian.com>

	* XslTransformTests.cs : added test for bug #76530.

2005-10-08  Zoltan Varga  <vargaz@gmail.com>

	* XslTransformTests.cs: Remove test which depends on random GC
	behaviour.

2005-09-10  Atsushi Enomoto  <atsushi@ximian.com>

	* XslTransformTests.cs : added testcase for bug #76115.
	* MSXslScriptTests.cs : added testcase for bug #76116.

2005-09-10  Atsushi Enomoto  <atsushi@ximian.com>

	* XslTransformTests.cs : added testcase for bug #76046.

2005-08-31  Sebastien Pouliot  <sebastien@ximian.com>

	* XsltArgumentListCas.cs: New. CAS unit tests for AddExtensionObject.
	Note that this is a LinkDemand so it will succeed in 2.0 (as the test